src/components/Panel/RequestsList/RequestsList.scss
@import '../../../sass/global';

.requests-list {

  a {
    cursor: pointer;
  }

  .collection {
    margin: 0;
    border-top: none;
    border-left: none;
    border-right: none;

    .collection-header {
        color: #fff;
        font-size: 18px;
        background-color: $secondary-color!important;
        border-bottom: none!important;

        i {
          position: absolute;
          top: 12px;
          right: 18px;
          cursor: pointer;
        }

        .choose-request {
          font-size: 12px;
          text-transform: none;
        }
      }

    .collection-item {
      color: $dark-text;
      padding-left: 20px!important;

      .primary-content {
        width: calc(100% - 75px);
        float: left;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      .secondary-content {
        width: 75px;
        text-align: right;
        float: right;
      }

      &:hover {
        &:not(.no-item) {
          color: $hover-text-color;
          border-color: $secondary-color;

          .secondary-content {
            color: $hover-text-color;
          }
        }
      }
    }
  }

  .request-container {
    position: fixed;
    right: 0;
    bottom: 0;
    left: 0;
    top: 37px;

    .card {
      position: absolute;
      right: 0;
      bottom: 0;
      left: 0;
      top: 0;
      margin: 0;
      overflow-y: auto;

      .card-content {
        .card-title {
          margin-bottom: 0;
        }

        .card-sub-title {
          margin-bottom: 8px;
          display: block;
          color: $secondary-color;
        }

        .card-close {
          float: right;
          cursor: pointer;
          color: lighten(gray, 10%);
          transition: color ease-in-out 0.15s;

          &:hover {
            color: darken(gray, 10%);
          }
        }
      }

      .card-action {
        line-height: 2.5;

        .show-bits-balance {
          margin-right: 0!important;
        }
      }
    }
  }
}

.dark-theme {
  .requests-list {
    .collection {

      border-color: $dark-border-color;

      .collection-header {
        border-color: $dark-border-color;
      }

      .collection-item {
        color: $light-text;
        border-color: $dark-border-color;

        &:hover {
          &:not(.no-item) {
            color: $hover-text-color;
          }
        }
      }
    }
  }
}

